# robo-fleet-dora-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SETUP_ENVIRONMENT.md
models/scripts/: check_all_models.py  download_kokoro_models.sh  download_onnxruntime.sh  download_sherpa_vits_models.sh  export_yolo_to_onnx.py
orchestra/: orchestra-dataflow.yml
robo_rover_lib/src/types/: detection_types.rs  performance_types.rs
rover-kiwi/: rover-kiwi-dataflow.yml
rover-kiwi/object_detector/src/: main.rs
rover-kiwi/object_tracker/: Cargo.toml
rover-kiwi/object_tracker/src/: cmc.rs  main.rs
rover-kiwi/performance_monitor/src/: main.rs
rover-kiwi/reid_extractor/: Cargo.toml
rover-kiwi/reid_extractor/src/: main.rs
rover-kiwi/sherpa_tts/: Cargo.toml
rover-kiwi/sherpa_tts/src/: main.rs
